# final-project-mouxtin-ae

./: .gitignore  README.md  _init_.py  pyproject.toml
examples/: main.py  turbine_example.py
src/: _init_.py  airfoil_tools.py  bem_solver.py  data_loader.py  performance_curves.py  plots.py
src/wind_turbine/: turbine_classes.py
tests/: test_bem.py  test_parse_plot_airfoils.py  test_project.py
